--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
@@ -147,23 +149,23 @@
               <!-- Begin Student 3 -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  <a href="students/Jess-Flatiron.html">
+                    <img width="304" height="304" class="prof-image" src="img/students/jess.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/Jess-Flatiron.html">Jessica Long</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">Life is either a daring adventure or it is nothing.</p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p> Hello all, I’m Jess. I recently moved to NYC from KS at the very end of last year.  I’m excited to start learning. Back home I was involved with Real estate photography and also worked in the master control room for college athletic events. I have a cocker spaniel named Leah. I love being outdoors, doing yoga and traveling!</p>
                 </div>
                 <div class="clear"></div>
               </li>
@@ -180,7 +182,7 @@
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/student_html">Student Name</a>
                     </h3>
                   </div>
                   <p class="home-blog-post-meta">Tag Line</p>
