--- a/students/eric.html
+++ b/students/eric.html
@@ -10,7 +10,7 @@
   <link rel='stylesheet' href="../css/style.css" type='text/css' media='all' />
   <style>
     .top-page-title {
-      background: url(../img/students/student_name_background.jpg) no-repeat top center;
+      background: url(../img/students/0716_2.jpg) no-repeat top center;
     }
   </style>
   <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
@@ -74,7 +74,7 @@
       </div>
 
       <div class="link-subs">
-        <span><img class="swiss-knife-icon" src="../img/swiss-army-knife.png">Student Name</span>
+        <span><img class="swiss-knife-icon" src="../img/swiss-army-knife.png">Eric Che</span>
         <ul class="smooth-scroller">
           <li><a href="#scroll-about">About</a></li>
           <li>|</li>
@@ -94,19 +94,19 @@
       <!-- Begin Splash Image -->
       <div class="top-page-title">
         <div>
-          <img src="../img/students/student_name_profile.jpg" class="student_pic">
+          <img src="../img/students/0716_1.jpg" class="student_pic">
         </div>
       </div>
       <! -- End Splash Image -->
 
       <!-- Begin Title Content -->
       <div class="page-title">
-        <h4 class="ib_main_header">Student Name</h4>
+        <h4 class="ib_main_header">Eric Che</h4>
         <div class="social-icons">
-          <a href="https://twitter.com/"><i class="icon-twitter ib-social-icons"></i></a>
-          <a href="http://www.linkedin.com/"><i class="icon-linkedin-sign ib-social-icons"></i></a>
-          <a href="https://github.com/"><i class="icon-github ib-social-icons"></i></a>
-          <a href="#"><i class="icon-rss ib-social-icons"></i></a>
+          <a href="https://twitter.com/" target= "_blank"><i class="icon-twitter ib-social-icons"></i></a>
+          <a href="http://www.linkedin.com/" target= "_blank"><i class="icon-linkedin-sign ib-social-icons"></i></a>
+          <a href="https://github.com/chejianchao" target= "_blank"><i class="icon-github ib-social-icons"></i></a>
+          <a href="#" target= "_blank"><i class="icon-rss ib-social-icons"></i></a>
         </div>
 
         <div class="section section-testimonials-curriculum quote-div">
@@ -114,7 +114,7 @@
             <ul class="testimonials slides">
               <li id="text-7" class="widget_text" style="list-style: none; display: list-item;">
                 <div class="textwidget">
-                  <h3>"Quote It was the best of times it was meh." -- someone smart said this.</h3>
+                  <h3>None</h3>
                 </div>
               </li>
             </ul>
@@ -138,7 +138,7 @@
                 <div class="services-title"><h3>Biography</h3></div>
                 <div class="clear"></div>
                 <p>
-                  Bio here... Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut.
+                  None.
                 </p>
               </div>
             </div>
@@ -148,8 +148,8 @@
                 <div class="services-title"><h3>Education</h3></div>
                 <div class="clear"></div>
                 <ul>
-                  <li>University</li>
-                  <li>Other School</li>
+                  <li>None</li>
+                  <li></li>
                 </ul>
               </div>
             </div>
@@ -158,9 +158,9 @@
               <div class="services">
                 <div class="services-title"><h3>Work</h3></div>
                 <div class="clear"></div>
-                <h4>Some Company</h4>
+                <h4>Company</h4>
                 <p>
-                  Blurb about company...
+                  None
                 </p>
               </div>
             </div>
@@ -176,7 +176,7 @@
               <div class="services-wrap section coder-cred" id="equalize">
 
                 <div class="column fourth">
-                  <a href="http://www.github.com/" target="_blank"><img src="../img/github.png" alt="GitHub" width="130px"></a>
+                  <a href="http://www.github.com/chejianchao" target="_blank"><img src="../img/github.png" alt="GitHub" width="130px"></a>
                 </div>
 
                 <div class="column fourth">
@@ -226,8 +226,7 @@
                     </div>
                     <div class="clear"></div>
                     <p>
-                      - <a href="#">Personal Blog</a><br>
-                      - <a href="#">Tumblr</a><br>
+                      - <a href="http://chejianchao.github.io " target= "_blank">Eric's Blog</a><br>
                     </p>
                   </div>
                 </div>
@@ -273,9 +272,9 @@
                   </div>
                   <div class="clear"></div>
                   <p>
-                    - Favorite Website: <a href="#">Site 1</a><br>
-                    - Favorite Comic: <a href="#">Site 2</a><br>
-                    - Favorite Radio Program: <a href="#">Site 3</a><br>
+                    - Favorite Website: <a href="http://youtube.com" target= "_blank">Youtube</a><br>
+                    - Favorite Comic: <a href="#" target= "_blank">None</a><br>
+                    - Favorite Radio Program: <a href="#" target= "_blank">None</a><br>
                   </p>
                 </div>
               </div>
