--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body class="home page students">
   <!-- Begin Main Wrapper -->
-  <div class="main-wrapper">
+  <div class="main-wrapper">Ç
     <!-- Begin Header -->
     <div class="header-wrapper">
       <div class="header">
@@ -147,15 +147,15 @@
               <!-- Begin Student 3 -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  <a href="students/ralph.html">
+                    <img width="304" height="304" class="prof-image" src="img/students/ralph_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="ralph">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/ralph.html">Student Name</a>
                     </h3>
                   </div>
                   <p class="home-blog-post-meta">Tag Line</p>
