--- a/students/Jess-Flatiron.html
+++ b/students/Jess-Flatiron.html
@@ -273,9 +273,9 @@
                   </div>
                   <div class="clear"></div>
                   <p>
-                    - Favorite Website: <a href="https://cntraveler.com"> Conde Nast Traveler</a><br>
-                    - Favorite Comic: <a href="https://www.hbo.com/last-week-tonight-with-john-oliver">John Olvier</a><br>
-                    - Favorite Radio Program: <a href="https://www.npr.org/"> NPR</a><br>
+                    - Favorite Website: <a href="https://cntraveler.com" target= "_blank"> Conde Nast Traveler</a><br>
+                    - Favorite Comic: <a href="https://www.hbo.com/last-week-tonight-with-john-oliver" target="_blank">John Olvier</a><br>
+                    - Favorite Radio Program: <a href="https://www.npr.org/" target="_blank"> NPR</a><br>
                   </p>
                 </div>
               </div>
